// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsPaymentMethodScreen keeps cached methods visible when a refetch errors 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto pb-4"
    >
      <div
        class="flex flex-col"
      >
        <button
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
          data-testid="ramps-payment-method-item-debit-credit-card"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <div
                  class="flex flex-row gap-2 items-center w-full min-w-0"
                >
                  <p
                    class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                  >
                    Debit card
                  </p>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-debit-credit-card"
                >
                  5 - 10 mins
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <svg
                class="inline-block w-6 h-6 text-icon-default"
                data-testid="ramps-payment-method-item-selected"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
          data-testid="ramps-payment-method-item-bank-transfer"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.25 9.75H4.5v6H3a.75.75 0 0 0 0 1.5h18a.75.75 0 0 0 0-1.5h-1.5v-6h2.25a.75.75 0 0 0 .393-1.388l-9.75-6a.75.75 0 0 0-.786 0l-9.75 6A.75.75 0 0 0 2.25 9.75m3.75 0h3v6H6Zm7.5 0v6h-3v-6Zm4.5 6h-3v-6h3ZM12 3.88l7.1 4.37H4.9ZM23.25 19.5a.75.75 0 0 1-.75.75h-21a.75.75 0 0 1 0-1.5h21a.75.75 0 0 1 .75.75"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <div
                  class="flex flex-row gap-2 items-center w-full min-w-0"
                >
                  <p
                    class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                  >
                    Bank transfer
                  </p>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-bank-transfer"
                >
                  Instant
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot when no payment methods are available 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-empty"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        No payment methods are available.
      </p>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot when payment methods fail to load 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-error"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        Error loading payment methods
      </p>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot when payment methods query is idle 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-empty"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex flex-col gap-2 items-center justify-center flex-1 px-4 py-8"
    >
      <p
        class="text-alternative text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-regular font-default"
      >
        No payment methods are available.
      </p>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot while loading 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-loading"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex flex-col gap-4 flex-1 px-4 pt-2"
      data-testid="ramps-payment-method-skeleton"
    >
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <div
          aria-hidden="true"
          class="relative overflow-hidden h-10 w-10 shrink-0 rounded-full"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
          />
        </div>
        <div
          class="flex flex-col gap-2 min-w-0 flex-1"
        >
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded h-3 w-16"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded h-3 w-1/3"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <div
          aria-hidden="true"
          class="relative overflow-hidden h-10 w-10 shrink-0 rounded-full"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
          />
        </div>
        <div
          class="flex flex-col gap-2 min-w-0 flex-1"
        >
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded h-3 w-16"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded h-3 w-1/3"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
        </div>
      </div>
      <div
        class="flex flex-row gap-3 items-center w-full"
      >
        <div
          aria-hidden="true"
          class="relative overflow-hidden h-10 w-10 shrink-0 rounded-full"
        >
          <div
            aria-hidden="true"
            class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
          />
        </div>
        <div
          class="flex flex-col gap-2 min-w-0 flex-1"
        >
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded h-3 w-16"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded h-3 w-1/3"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot with payment methods 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto pb-4"
    >
      <div
        class="flex flex-col"
      >
        <button
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
          data-testid="ramps-payment-method-item-debit-credit-card"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <div
                  class="flex flex-row gap-2 items-center w-full min-w-0"
                >
                  <p
                    class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                  >
                    Debit card
                  </p>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-debit-credit-card"
                >
                  5 - 10 mins
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <svg
                class="inline-block w-6 h-6 text-icon-default"
                data-testid="ramps-payment-method-item-selected"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
          data-testid="ramps-payment-method-item-bank-transfer"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.25 9.75H4.5v6H3a.75.75 0 0 0 0 1.5h18a.75.75 0 0 0 0-1.5h-1.5v-6h2.25a.75.75 0 0 0 .393-1.388l-9.75-6a.75.75 0 0 0-.786 0l-9.75 6A.75.75 0 0 0 2.25 9.75m3.75 0h3v6H6Zm7.5 0v6h-3v-6Zm4.5 6h-3v-6h3ZM12 3.88l7.1 4.37H4.9ZM23.25 19.5a.75.75 0 0 1-.75.75h-21a.75.75 0 0 1 0-1.5h21a.75.75 0 0 1 .75.75"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <div
                  class="flex flex-row gap-2 items-center w-full min-w-0"
                >
                  <p
                    class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                  >
                    Bank transfer
                  </p>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-bank-transfer"
                >
                  Instant
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen matches snapshot with per-method quotes 1`] = `
<div>
  <div
    class="flex h-full flex-col bg-background-default"
    data-testid="ramps-payment-method-screen"
  >
    <div
      class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
    >
      <button
        aria-label="Back"
        class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
        data-testid="ramps-payment-method-back"
        role="button"
      >
        <svg
          class="inline-block w-5 h-5 text-icon-default"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
          />
        </svg>
      </button>
      <p
        class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Pay with
      </p>
    </div>
    <div
      class="flex-1 overflow-y-auto pb-4"
    >
      <div
        class="flex flex-col"
      >
        <button
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
          data-testid="ramps-payment-method-item-debit-credit-card"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <div
                  class="flex flex-row gap-2 items-center w-full min-w-0"
                >
                  <p
                    class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                  >
                    Debit card
                  </p>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-debit-credit-card"
                >
                  5 - 10 mins
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <div
                class="flex flex-col items-end"
                data-testid="ramps-quote-display"
              >
                <p
                  class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
                >
                  0.05 ETH
                </p>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
                >
                  $99.50
                </p>
              </div>
              <svg
                class="inline-block w-6 h-6 text-icon-default"
                data-testid="ramps-payment-method-item-selected"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
                />
              </svg>
            </div>
          </div>
        </button>
        <button
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
          data-testid="ramps-payment-method-item-bank-transfer"
          role="button"
        >
          <div
            class="flex flex-row gap-3 items-center justify-between w-full"
          >
            <div
              class="flex flex-row gap-3 items-center min-w-0 flex-1"
            >
              <div
                class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-alternative"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.25 9.75H4.5v6H3a.75.75 0 0 0 0 1.5h18a.75.75 0 0 0 0-1.5h-1.5v-6h2.25a.75.75 0 0 0 .393-1.388l-9.75-6a.75.75 0 0 0-.786 0l-9.75 6A.75.75 0 0 0 2.25 9.75m3.75 0h3v6H6Zm7.5 0v6h-3v-6Zm4.5 6h-3v-6h3ZM12 3.88l7.1 4.37H4.9ZM23.25 19.5a.75.75 0 0 1-.75.75h-21a.75.75 0 0 1 0-1.5h21a.75.75 0 0 1 .75.75"
                  />
                </svg>
              </div>
              <div
                class="flex flex-col items-start min-w-0 flex-1"
              >
                <div
                  class="flex flex-row gap-2 items-center w-full min-w-0"
                >
                  <p
                    class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                  >
                    Bank transfer
                  </p>
                </div>
                <p
                  class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                  data-testid="ramps-payment-method-item-delay-bank-transfer"
                >
                  Quote unavailable.
                </p>
              </div>
            </div>
            <div
              class="flex flex-row gap-2 items-center shrink-0"
            >
              <div
                class="flex flex-col items-end justify-center"
                data-testid="ramps-quote-display-warning"
              >
                <svg
                  class="inline-block w-4 h-4 text-warning-default"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2.25A9.75 9.75 0 1 0 21.75 12 9.76 9.76 0 0 0 12 2.25m0 18A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25m-.75-7.5V7.5a.75.75 0 0 1 1.5 0v5.25a.75.75 0 0 1-1.5 0m1.875 3.375A1.125 1.125 0 1 1 12 15a1.125 1.125 0 0 1 1.125 1.125"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
      data-testid="ramps-change-provider-footer"
    >
      <p
        class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
      >
        Buying via Test Provider.
      </p>
      <button
        class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
        data-testid="ramps-change-provider-button"
        role="button"
      >
        <span
          class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Change provider.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`RampsPaymentMethodScreen opens provider selection modal when change provider is clicked 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="flex h-full flex-col bg-background-default"
      data-testid="ramps-payment-method-screen"
    >
      <div
        class="flex-col relative flex min-h-16 items-center justify-center px-4 py-3"
      >
        <button
          aria-label="Back"
          class="inline-flex items-center justify-center font-medium text-default overflow-hidden transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] absolute left-4 top-1/2 -translate-y-1/2 rounded-full p-1 bg-transparent min-w-0 h-auto hover:bg-hover active:bg-pressed"
          data-testid="ramps-payment-method-back"
          role="button"
        >
          <svg
            class="inline-block w-5 h-5 text-icon-default"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.53 18.97a.75.75 0 0 1-1.06 1.06l-7.5-7.5a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 0 1 1.06 1.06L8.56 12Z"
            />
          </svg>
        </button>
        <p
          class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
        >
          Pay with
        </p>
      </div>
      <div
        class="flex-1 overflow-y-auto pb-4"
      >
        <div
          class="flex flex-col"
        >
          <button
            class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-background-muted"
            data-testid="ramps-payment-method-item-debit-credit-card"
            role="button"
          >
            <div
              class="flex flex-row gap-3 items-center justify-between w-full"
            >
              <div
                class="flex flex-row gap-3 items-center min-w-0 flex-1"
              >
                <div
                  class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
                >
                  <svg
                    class="inline-block w-6 h-6 text-icon-alternative"
                    fill="currentColor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 4.5H3A1.5 1.5 0 0 0 1.5 6v12A1.5 1.5 0 0 0 3 19.5h18a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 21 4.5M21 6v2.25H3V6Zm0 12H3V9.75h18zm-1.5-2.25a.75.75 0 0 1-.75.75h-3a.75.75 0 0 1 0-1.5h3a.75.75 0 0 1 .75.75m-6 0a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5a.75.75 0 0 1 .75.75"
                    />
                  </svg>
                </div>
                <div
                  class="flex flex-col items-start min-w-0 flex-1"
                >
                  <div
                    class="flex flex-row gap-2 items-center w-full min-w-0"
                  >
                    <p
                      class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                    >
                      Debit card
                    </p>
                  </div>
                  <p
                    class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                    data-testid="ramps-payment-method-item-delay-debit-credit-card"
                  >
                    5 - 10 mins
                  </p>
                </div>
              </div>
              <div
                class="flex flex-row gap-2 items-center shrink-0"
              >
                <svg
                  class="inline-block w-6 h-6 text-icon-default"
                  data-testid="ramps-payment-method-item-selected"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21.53 7.28-12 12a.75.75 0 0 1-1.06 0l-5.25-5.25a.75.75 0 0 1 1.06-1.06L9 17.69 20.47 6.22a.75.75 0 0 1 1.06 1.06"
                  />
                </svg>
              </div>
            </div>
          </button>
          <button
            class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
            data-testid="ramps-payment-method-item-bank-transfer"
            role="button"
          >
            <div
              class="flex flex-row gap-3 items-center justify-between w-full"
            >
              <div
                class="flex flex-row gap-3 items-center min-w-0 flex-1"
              >
                <div
                  class="inline-flex items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-muted shrink-0"
                >
                  <svg
                    class="inline-block w-6 h-6 text-icon-alternative"
                    fill="currentColor"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.25 9.75H4.5v6H3a.75.75 0 0 0 0 1.5h18a.75.75 0 0 0 0-1.5h-1.5v-6h2.25a.75.75 0 0 0 .393-1.388l-9.75-6a.75.75 0 0 0-.786 0l-9.75 6A.75.75 0 0 0 2.25 9.75m3.75 0h3v6H6Zm7.5 0v6h-3v-6Zm4.5 6h-3v-6h3ZM12 3.88l7.1 4.37H4.9ZM23.25 19.5a.75.75 0 0 1-.75.75h-21a.75.75 0 0 1 0-1.5h21a.75.75 0 0 1 .75.75"
                    />
                  </svg>
                </div>
                <div
                  class="flex flex-col items-start min-w-0 flex-1"
                >
                  <div
                    class="flex flex-row gap-2 items-center w-full min-w-0"
                  >
                    <p
                      class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                    >
                      Bank transfer
                    </p>
                  </div>
                  <p
                    class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default truncate text-left"
                    data-testid="ramps-payment-method-item-delay-bank-transfer"
                  >
                    Instant
                  </p>
                </div>
              </div>
              <div
                class="flex flex-row gap-2 items-center shrink-0"
              />
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
        data-testid="ramps-change-provider-footer"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        >
          Buying via Test Provider.
        </p>
        <button
          class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
          data-testid="ramps-change-provider-button"
          role="button"
        >
          <span
            class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
          >
            Change provider.
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="bg-overlay-default fixed inset-0 z-[1050] motion-safe:animate-fade-in"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="fixed inset-0 z-[1050] flex justify-center p-4 sm:py-8 md:py-12 [@media(max-height:475px)]:p-2 items-center"
      >
        <section
          aria-modal="true"
          class="flex-col items-stretch justify-start pt-4 pr-0 pb-4 pl-0 border border-alternative bg-elevated1 flex max-h-full w-full rounded-lg shadow-lg motion-safe:animate-slide-up max-w-[480px]"
          data-testid="ramps-provider-selection-modal"
          role="dialog"
        >
          <header
            class="grid grid-cols-[1fr_auto_1fr] items-center px-4 pb-4"
          >
            <div
              class="col-start-2 col-end-3 w-full"
            >
              <h4
                class="text-default text-s-heading-sm leading-s-heading-sm tracking-s-heading-sm md:text-l-heading-sm md:leading-l-heading-sm md:tracking-l-heading-sm font-bold font-default text-center"
              >
                Choose provider
              </h4>
            </div>
            <div
              class="col-start-3 justify-self-end"
            >
              <button
                aria-label="Close"
                class="inline-flex items-center justify-center p-0 h-8 w-8 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-icon-default"
                data-testid="ramps-provider-selection-close"
              >
                <svg
                  class="inline-block w-6 h-6 text-inherit"
                  fill="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.28 18.22a.75.75 0 0 1-1.06 1.06L12 13.06l-6.22 6.22a.75.75 0 0 1-1.06-1.06L10.94 12 4.72 5.78a.75.75 0 0 1 1.06-1.06L12 10.94l6.22-6.22a.75.75 0 0 1 1.06 1.06L13.06 12Z"
                  />
                </svg>
              </button>
            </div>
          </header>
          <div
            class="relative max-h-full overflow-y-auto px-0 pt-0"
            tabindex="0"
          >
            <div
              class="max-h-[60vh] overflow-y-auto"
            >
              <div
                class="flex flex-col"
              >
                <button
                  class="inline-flex items-center justify-center font-medium text-default overflow-hidden relative transition-all duration-100 ease-linear active:scale-[0.97] active:ease-[cubic-bezier(0.3,0.8,0.3,1)] w-full rounded-none px-4 py-3 min-h-14 min-w-0 h-auto hover:bg-hover active:bg-pressed bg-transparent"
                  data-testid="ramps-provider-item-/providers/transak"
                  role="button"
                >
                  <div
                    class="flex flex-row gap-3 items-center justify-between w-full"
                  >
                    <div
                      class="flex flex-col gap-1 items-start min-w-0 flex-1"
                    >
                      <div
                        class="flex flex-row gap-2 items-center w-full min-w-0"
                      >
                        <p
                          class="text-default text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default truncate text-left"
                        >
                          Transak
                        </p>
                      </div>
                    </div>
                    <div
                      class="flex flex-row gap-2 items-center shrink-0"
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
